trying to fix scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer base {
+
   :root {
     --background: 224 71.4% 4.1%;
     --foreground: 210 20% 98%;
@@ -35,3 +35,14 @@
     @apply bg-background text-foreground;
   }
 }
+@layer components {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+     /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+    }
+  }
